# edu_drive_ros2

./: .clang-format  CMakeLists.txt  README.md
doc/legacyInstallationGuides/: Ubuntu22.md  Ubuntu23.md
docker/: Dockerfile
docker/launch_content/: edu_bot.launch.py  edu_drive_edu_bot.yaml
images/simulateEnableLogic/: simulateEnableLogic.cpp
launch/: edu_bot.launch.py  edu_drive.launch.py  edu_drive_edu_bot.launch.py
parameter/: edu_bot.yaml  edu_drive.yaml  edu_drive_edu_bot.yaml  edu_drive_joyit.yaml
src/: CommandMultiplexer.cpp  CommandMultiplexer.h  EduDrive.cpp  EduDrive.h  JoystickInputHandler.cpp  JoystickInputHandler.h  Matrix.cpp  Matrix.h  MotorController.cpp  MotorController.h  Odometry.cpp  Odometry.h  PowerManagementBoard.cpp  PowerManagementBoard.h  RPiAdapterBoard.cpp  RPiAdapterBoard.h  RPiExtensionBoard.cpp  RPiExtensionBoard.h  edu_drive_node.cpp
src/can/: SocketCAN.cpp  SocketCAN.h  SocketCANObserver.cpp  SocketCANObserver.h  canprotocol.cpp  canprotocol.h
src/test/: can_motor_test.cpp  matrix_test.cpp
